--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   font-family: sans-serif;
   text-align: center;
   border: 2px solid black;
+  width: 600px;
   margin: 50px 50px 50px 50px;
 }
 .App li {
